# autonomous_flight

./: CMakeLists.txt  README.md  package.xml
cfg/: inspection_param.yaml  orca_param.yaml  test_bspline.yaml  test_bspline_mapping.yaml  test_flight.yaml
cfg/dynamic_exploration/: dynamic_detector_param.yaml  exploration_param.yaml  flight_base.yaml  mapping_param.yaml  planner_param.yaml
cfg/dynamic_inspection/: dynamic_mapping_param.yaml  fake_detector_param.yaml  flight_base.yaml  inspection.yaml  inspection_param.yaml  mapping_param.yaml  planner_param.yaml
cfg/dynamic_navigation/: detector_param.yaml  dynamic_detector_param.yaml  dynamic_detector_param_new.yaml  dynamic_map_param_new.yaml  dynamic_mapping_param.yaml  dynamic_mapping_param_new.yaml  fake_detector_param.yaml  flight_base.yaml  mapping_param.yaml  planner_param.yaml  predictor_param.yaml
cfg/inspection/: inspection_param.yaml
cfg/mpc_navigation/: dynamic_detector_param.yaml  fake_detector_param.yaml  flight_base.yaml  mapping_param.yaml  (+2 more)
launch/: dynamic_exploration.launch  dynamic_inspection.launch  dynamic_navigation.launch  flight_test.launch  inspection.launch  mpc_navigation.launch  navigation.launch  navigation_waypoint.launch  orca_node.launch  takeoff_and_hover.launch  takeoff_and_track_circle.launch  test_bspline.launch  test_navigation.launch
log/: acc_adjusted_info.txt  acc_hist.txt  acc_info.txt  vel_adjusted_info.txt  vel_hist.txt  vel_info.txt
scripts/: acc_hist.txt  plot_record_history.py  plot_traj_info.py  record_history.py  throttle_topics.sh  vel_hist.txt
(+68 files in other folders)
