<?xml version="1.0"?>
<package format="2">
  <name>autonomous_flight</name>
  <version>1.0.0</version>
  <description>The autonomous_flight package integrating all components to achieve autonomous navigation, exploration and inspection.</description>

  <maintainer email="zhefanx@andrew.cmu.edu">Zhefan Xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>onboard_detector</build_depend>
  <build_depend>tracking_controller</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>trajectory_planner</build_depend>
  <build_depend>map_manager</build_depend>
  <build_depend>tracking_controller</build_depend>
  <build_depend>time_optimizer</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tracking_controller</exec_depend>

  <export>
  </export>
</package>